--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
         </div>
       </div>
       <div class="contact-container bg-black">
-        <!-- REMIND TO PUT THE ID IN THE ENV VARIABLE ON GITHUB PAGES -->
         <form
-          action="https://formspree.io/f/formspree_id"
+          action="https://formspree.io/f/FORMSPREE_ID"
           method="post"
           class="contact-form bg-black"
         >
